# gameboy_emulator

./: .gitignore  Cargo.toml  README.md  build.rs  callstack
.github/workflows/: test.yaml
assets/graphics/shaders/: background.fsh  background.vsh  object.fsh  object.vsh  ui.fsh  ui.vsh
src/: main.rs
src/app/: app.rs  mod.rs  performance_timer.rs
src/cpu/: alu.rs  carry_trait.rs  cpu.rs  game_boy_cpu.rs  interrupt.rs  mod.rs  nullable_cpu.rs  register.rs  register16.rs  register8.rs  registers.rs
src/cpu/instructions/: adc_a_a.rs  adc_a_hl.rs  adc_a_n.rs  adc_a_r.rs  add_a_a.rs  add_a_hl.rs  add_a_n.rs  add_a_r.rs  add_hl_rr.rs  add_sp_n.rs  and_a_a.rs  and_a_hl.rs  and_a_n.rs  and_a_r.rs  bad_instruction.rs  call_cc_nn.rs  call_nn.rs  ccf.rs  cp_a_a.rs  cp_a_hl.rs  cp_a_n.rs  cp_a_r.rs  cpl_a.rs  daa.rs  dec_bc.rs  dec_hl_addr.rs  dec_r.rs  dec_rr.rs  di.rs  ei.rs  halt.rs  inc_hl.rs  inc_hl_addr.rs  inc_r.rs  inc_rr.rs  instruction.rs  jp.rs  jp_cc_nn.rs  jp_hl.rs  jp_nn.rs  (+60 more)
src/cpu/instructions/bitwise/: bit.rs  bit_b_hl.rs  bit_b_r.rs  bitwise.rs  bitwise_bad_instruction.rs  mod.rs  res_b_hl.rs  res_b_r.rs  rl_hl.rs  rl_r.rs  rlc_hl.rs  rlc_r.rs  rr_hl.rs  rr_r.rs  (+12 more)
src/memory/: hram.rs  memory_controller.rs  memory_trait.rs  mod.rs  oam.rs  object.rs  ram.rs  rom.rs  sram.rs  vram.rs
src/memory/io_map/: divider.rs  interrupt_io.rs  io_map.rs  io_trait.rs  joypad_io.rs  mod.rs  video_io.rs
src/renderer/: mod.rs  renderer_error.rs  video_processor.rs
src/system/: clock_event.rs  event_handler.rs  main_board.rs  mod.rs  system_error.rs  vdu_counter.rs
(+2 files in other folders)
