[package]
name = "gameboy_emulator"
version = "0.1.1"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3

[dependencies]
dec_gl = { git = "https://github.com/Decenigis/dec_gl.git", version = "0.3.6" }
gl = "*"
glfw = "*"
exitcode = "1.1.2"
rand = "0.9.0"
thiserror = "2.0.11"
mockall = "*"
mockall_double = "0.3.1"
parking_lot = "0.12.3"
dialog = "0.3.0"
paste = "1.0.15"
